# LISS4-Cloud-Reconstruction

./: .env.example  .gitignore  README.md  about-features.css  about-features.html  about-features.js  about.html  docker-compose.yml  features.html  index.html  register.html  register.js  repo-backup-2026-07-02.bundle  script.js  sign-in.html  sign-in.js  styles.css
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  history.py  inference.py  uploads.py
backend/app/core/: config.py  database.py  security.py
backend/app/domain/: __init__.py  models.py  schemas.py
backend/app/repositories/: images.py  jobs.py  users.py
backend/app/services/: auth.py  imagery.py  pipeline.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: test_pipeline_engine.py  test_security.py
docs/: api.md  architecture.md  database-schema.md  deployment.md  er-diagram.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: page.tsx
frontend/app/history/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: app-shell.tsx  leaflet-map.tsx  map-view.tsx  mapbox-canvas.tsx  pipeline-console.tsx  result-card.tsx  upload-panel.tsx
frontend/components/ui/: button.tsx  card.tsx  input.tsx  select.tsx
frontend/lib/: api.ts  types.ts
infra/docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
ml/: pyproject.toml
ml/gencloudnet_ml/: __init__.py  datasets.py  explainability.py  metrics.py  models.py  pipeline.py  preprocessing.py  trainer.py
ml/scripts/: train.py
