[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gencloudnet-api"
version = "0.1.0"
description = "FastAPI backend for GenCloudNet"
requires-python = ">=3.11"
dependencies = [
  "authlib>=1.3.1",
  "celery[redis]>=5.4.0",
  "fastapi>=0.115.0",
  "geoalchemy2>=0.15.1",
  "geopandas>=1.0.1",
  "httpx>=0.27.2",
  "numpy>=2.1.0",
  "pandas>=2.2.2",
  "passlib[bcrypt]>=1.7.4",
  "pillow>=10.4.0",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.5.2",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.10",
  "rasterio>=1.4.1",
  "redis>=5.0.8",
  "scikit-image>=0.24.0",
  "shapely>=2.0.6",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
