[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gencloudnet-ml"
version = "0.1.0"
description = "ML package for GenCloudNet"
requires-python = ">=3.11"
dependencies = [
  "albumentations>=1.4.17",
  "diffusers>=0.30.3",
  "matplotlib>=3.9.2",
  "mlflow>=2.16.2",
  "numpy>=2.1.0",
  "opencv-python-headless>=4.10.0.84",
  "pandas>=2.2.2",
  "rasterio>=1.4.1",
  "scikit-image>=0.24.0",
  "scikit-learn>=1.5.2",
  "torch>=2.4.1",
  "torchvision>=0.19.1",
  "transformers>=4.44.2",
  "wandb>=0.17.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gencloudnet_ml*"]
